<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">指纹支付</string>
    <string name="action_settings">设置</string>
    <string name="ActivityIn">金额转出</string>
    <string name="ActivityOut">金额转入</string>
    <string name="ActivityWallet">我的钱包</string>
    <string name="Transmoney">转账</string>
    <string name="ChooseAccount">选择账户</string>
    <string name="ChooseCard">选择银行卡</string>
    <string name="ChooseContact">选择联系人</string>
    <string name="wealth">财富</string>
    <string name="Addcard">添加银行卡</string>
    <string name="AddOrDelCard">添加或删除银行卡</string>
    <string name="AddOrDelfingerprint">添加或删除指纹</string>
    <string name="phonemessage">填写验证码</string>
    <string name="addfingerprint">添加指纹</string>
    <string name="bill">账单</string>
    <string name="login">登陆</string>
    <string name="resetpw">重置密码</string>
    <string name="register">注册新用户</string>
    <string name="finish">退出</string>
    <string name="about">关于</string>
    <string name="loginout">注销此账号</string>
    <string name="forgetpw">忘记密码？</string>
    <string name="regisiter_bn">注 册</string>
    <string name="login_bn">登 录</string>
    <string name="login_phone">登录手机号</string>
    <string name="login_pw">登录密码</string>
    <string name="walletinmain">钱包</string>
    <string name="inputname_cardholder">请填写持卡人姓名</string>
    <string name="inputcardnum">请填写银行卡号</string>
    <string name="inputphone_stored">请填写预留手机号</string>
    <string name="nextstep">下 一 步</string>
    <string name="pickfingerprint">取指纹</string>
    <string name="upload">上传</string>
    <string name="card_binded">已绑定的银行卡</string>
    <string name="addfinger_bn">添 加 指 纹</string>
    <string name="billdetail">账单明细</string>
    <string name="inputname">请填写姓名</string>
    <string name="coupondetail_picked">领取的优惠券详情</string>
    <string name="inputcaontactorphone">输入账号（手机号码）</string>
    <string name="inputmoney">请输入金额</string>
    <string name="confirmpay">确认支付</string>
    <string name="inputpaypw">请输入密码</string>
    <string name="transferto">转到账号：</string>
    <string name="inputmessagecode">输入短信验证码</string>
    <string name="confirm">确 认</string>
    <string name="inputnickname">请输入昵称</string>
    <string name="inputphoneregistered">请输入注册手机号码</string>
    <string name="confirmpw">请确认密码</string>
    <string name="transfertoaccount">转到账户</string>
    <string name="transfertocard">转到银行卡</string>
    <string name="recentuse">最近使用</string>
    <string name="transfertofriend">转给好友</string>
    <string name="moveout">转 出</string>
    <string name="movein">转 入</string>
    <string name="choosecardmovein">选择转入银行卡</string>
    <string name="choosepaycard">选择付款银行卡</string>
    <string name="howmuch">金额</string>
    <string name="password">密码</string>
    <string name="coupon">优惠券</string>
    <string name="bankcard">银行卡</string>
    <string name="fingerprint">指纹</string>
    <string name="havepicked">已录入</string>

</resources>
