<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosepaycard"
        android:layout_gravity="center_horizontal" 
        android:textSize="25dp"/>

    <Spinner
        android:id="@+id/spinner_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >
    	<TextView
	        android:id="@+id/tv_mima"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/howmuch" 
	        android:textSize="18dp"/>

        <EditText
            android:id="@+id/et_numofout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputmoney"
            android:inputType="number"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >
    	<TextView
	        android:id="@+id/tv_jine"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/password"
	        android:textSize="18dp"/>

        <EditText
            android:id="@+id/et_passofout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/inputpaypw"
            android:inputType="textPassword" />
    </LinearLayout>



        <Button
            android:id="@+id/bn_sureofout"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nextstep" 
            android:background="@drawable/btn_default"
            android:textSize="20dp"/>


</LinearLayout>