<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/et_loginphonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/login_phone"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_loginpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_below="@+id/et_loginphonenumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/login_pw"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bn_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_default"
        android:text="@string/login_bn" />

    <TextView
        android:id="@+id/tv_pwforgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/et_loginpassword"
        android:layout_below="@+id/et_loginpassword"
        android:layout_marginTop="45dp"
        android:text="@string/forgetpw" />

    <Button
        android:id="@+id/bn_register"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/btn_default"
        android:text="@string/regisiter_bn" />

</RelativeLayout>