<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/et_phoneinresetpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_call_black_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/inputcaontactorphone" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_pwinresetpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_phoneinresetpw"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/inputpaypw"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bn_nextinpwreset"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_default"
        android:layout_below="@+id/et_pwsureinpwreset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/nextstep" />

    <EditText
        android:id="@+id/et_pwsureinpwreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_open_black_24dp"
        android:layout_alignLeft="@+id/et_phoneinresetpw"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_pwinresetpw"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/confirmpw"
        android:inputType="textPassword" />

</RelativeLayout>
