<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/et_inputcardwithname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/inputname" 
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_inputcontact"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_call_black_24dp"
        android:layout_below="@+id/et_inputcardwithname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/inputcaontactorphone" 
        android:inputType="number" />

    <Button
        android:id="@+id/bn_nextinInputContact"
        android:layout_width="240dp"
        android:background="@drawable/btn_default"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/nextstep" />

</RelativeLayout>