<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/et_inputnuminnextoftrans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_attach_money_black_18dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/inputmoney"
        android:inputType="number" />

    <Spinner
        android:id="@+id/sp_nextoftransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_inputnuminnextoftrans"
        android:layout_below="@+id/et_inputnuminnextoftrans"
        android:gravity="center_horizontal"
        android:layout_marginTop="22dp" />

    <Button
        android:id="@+id/bn_sure"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_inoutpasswordinnextoftrans"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_default"
        android:text="@string/confirmpay"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/et_inoutpasswordinnextoftrans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_alignLeft="@+id/et_inputnuminnextoftrans"
        android:layout_below="@+id/sp_nextoftransfer"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/inputpaypw"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_transfertosomeone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:text="***" 
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bn_sure"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="26dp"
        android:text="@string/transferto"
        android:textSize="25dp" />

</RelativeLayout>